syntax = "proto3";

package definitions;

service drcache {
    rpc Add (AddRequest) returns (Reply) {}
    rpc Set (SetRequest) returns (Reply) {}
    rpc Delete (DeleteRequest) returns (Reply) {}
    rpc DeleteAll (DeleteAllRequest) returns (Reply) {}
    rpc Get (GetRequest) returns (Reply) {}
    rpc AddServer (AddServerRequest) returns (Reply) {}
    rpc GetServers (GetServersRequest) returns (ServerList) {}
    rpc DropServer (DropServerRequest) returns (Reply) {}
}

message Item {
    string key = 1;
    bytes value = 2;
    uint32 lastUpdate = 3;
    uint32 expiration = 4;
}

message AddRequest {
    Item item = 1;
}

message CompareAndSwapRequest {
    Item item = 1;
}

message SetRequest {
    Item item = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteAllRequest {}

message GetRequest {
    string key = 1;
}

message Reply {
    string message = 1;
    Item item = 2;
}

message AddServerRequest {
    string address = 1;
}

message DropServerRequest {
    string server = 1;
}

message GetServersRequest {
}

message ServerList {
    repeated string servers = 1 ;
}